--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<header class="header">
+		<h1>Kraatje</h1>
+		<h2>Web designer</h2>
+		<div class="tagline">
+			<h3>Learn more about</h3>
+			<p>Learn more aboutLearn more aboutLearn more aboutLearn more about</p>
+		</div>
+	</header>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="main.css">
