Assignments up to 15

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,19 @@
 		<div class="tagline">
 			<h3>Learn more about</h3>
 			<p>Learn more aboutLearn more aboutLearn more aboutLearn more about</p>
+			<div class="skills">
+				<h3>My skills</h3>
+				<p>Such a gay project</p>
+				<ul>
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>JavaScript</li>
+					<div class="contact">
+						<h3>Contact me</h3>
+						<p><a href="#">By spamming codeschool</p>
+					</div>
+				</ul>
+			</div>
 		</div>
 	</header>
   <meta charset="UTF-8">
